Fixed scrollbar #16 and default utf-8

--- a/libraries/buildingblocks/style_unstable/toolbars.css
+++ b/libraries/buildingblocks/style_unstable/toolbars.css
@@ -10,7 +10,7 @@
   bottom: 0;
   left: 0;
   z-index: 100;
-  background-color: rgba(0,0,0,.85);
+  background-color: rgb(0,0,0);
 }
 
 [role="toolbar"] ul {
